python/tests/gold/tcpmappingtest/snapshots/econf.json
{
  "layered_runtime": {
    "layers": [
      {
        "name": "static_layer",
        "static_layer": {
          "re2.max_program_size.error_level": 200,
          "envoy.reloadable_features.no_extension_lookup_by_name": false
        }
      }
    ]
  },
  "static_resources": {
    "clusters": [
      {
        "alt_stat_name": "127_0_0_1_8877",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_127_0_0_1_8877_tcp_namespace",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8877,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_127_0_0_1_8877_tcp_namespace",
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "tcpmappingtest_http_target2_other_namespace_443",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_https___tcpmappingtest_http_targ-0",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "tcpmappingtest-http-target2.other-namespace",
                        "port_value": 443,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_https___tcpmappingtest_http_targ-0",
        "transport_socket": {
          "name": "envoy.transport_sockets.tls",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {}
          }
        },
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "tcpmappingtest_http_target3_tcp_namespace",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_https___tcpmappingtest_http_targ-1",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "tcpmappingtest-http-target3.tcp-namespace",
                        "port_value": 443,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_https___tcpmappingtest_http_targ-1",
        "transport_socket": {
          "name": "envoy.transport_sockets.tls",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {}
          }
        },
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "tcpmappingtest_http_target1_tcp_namespace_443",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_tcpmappingtest_http_target1_tcp_-0",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "tcpmappingtest-http-target1.tcp-namespace",
                        "port_value": 443,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_tcpmappingtest_http_target1_tcp_-0",
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "tcpmappingtest_http_target1_tcp_namespace_80",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_tcpmappingtest_http_target1_tcp_-1",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "tcpmappingtest-http-target1.tcp-namespace",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_tcpmappingtest_http_target1_tcp_-1",
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "tcpmappingtest_http_target2_other_namespace",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_tcpmappingtest_http_target2_othe-0",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "tcpmappingtest-http-target2.other-namespace",
                        "port_value": 443,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_tcpmappingtest_http_target2_othe-0",
        "transport_socket": {
          "name": "envoy.transport_sockets.tls",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {
              "tls_certificates": [
                {
                  "certificate_chain": {
                    "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.crt"
                  },
                  "private_key": {
                    "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.key"
                  }
                }
              ]
            }
          }
        },
        "type": "STRICT_DNS"
      }
    ],
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8443,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {
              "server_names": [
                "tls-context-host-1"
              ],
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "tls-context-host-1"
                        ],
                        "name": "tcpmappingtest-listener-tls-context-host-1",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ],
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "common_tls_context": {
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.crt"
                      },
                      "private_key": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.key"
                      }
                    }
                  ]
                }
              }
            }
          },
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "tls-context-host-1"
                        ],
                        "name": "tcpmappingtest-listener-tls-context-host-1",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          }
                        ]
                      },
                      {
                        "domains": [
                          "tls-context-host-2"
                        ],
                        "name": "tcpmappingtest-listener-tls-context-host-2",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          }
                        ]
                      },
                      {
                        "domains": [
                          "tls-context-host-3"
                        ],
                        "name": "tcpmappingtest-listener-tls-context-host-3",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ]
          },
          {
            "filter_chain_match": {
              "server_names": [
                "tls-context-host-2"
              ],
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "tls-context-host-2"
                        ],
                        "name": "tcpmappingtest-listener-tls-context-host-2",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ],
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "common_tls_context": {
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.crt"
                      },
                      "private_key": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.key"
                      }
                    }
                  ]
                }
              }
            }
          },
          {
            "filter_chain_match": {
              "server_names": [
                "tls-context-host-3"
              ],
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "tls-context-host-3"
                        ],
                        "name": "tcpmappingtest-listener-tls-context-host-3",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_tcp_namespace"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_tcp_namespace",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ],
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "common_tls_context": {
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.crt"
                      },
                      "private_key": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.key"
                      }
                    }
                  ]
                }
              }
            }
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.filters.listener.tls_inspector"
          }
        ],
        "name": "tcpmappingtest-listener",
        "traffic_direction": "UNSPECIFIED"
      },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 6789,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {
              "server_names": [
                "tls-context-host-3"
              ],
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "stat_prefix": "ingress_tls_6789",
                  "weighted_clusters": {
                    "clusters": [
                      {
                        "name": "cluster_https___tcpmappingtest_http_targ-1",
                        "weight": 100
                      }
                    ]
                  }
                }
              }
            ],
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "common_tls_context": {
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.crt"
                      },
                      "private_key": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.key"
                      }
                    }
                  ]
                }
              }
            }
          },
          {
            "filter_chain_match": {
              "server_names": [
                "tls-context-host-2"
              ],
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "stat_prefix": "ingress_tls_6789",
                  "weighted_clusters": {
                    "clusters": [
                      {
                        "name": "cluster_tcpmappingtest_http_target2_othe-0",
                        "weight": 100
                      }
                    ]
                  }
                }
              }
            ],
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "common_tls_context": {
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.crt"
                      },
                      "private_key": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.key"
                      }
                    }
                  ]
                }
              }
            }
          },
          {
            "filter_chain_match": {
              "server_names": [
                "tls-context-host-1"
              ],
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "stat_prefix": "ingress_tls_6789",
                  "weighted_clusters": {
                    "clusters": [
                      {
                        "name": "cluster_tcpmappingtest_http_target1_tcp_-1",
                        "weight": 100
                      }
                    ]
                  }
                }
              }
            ],
            "transport_socket": {
              "name": "envoy.transport_sockets.tls",
              "typed_config": {
                "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                "common_tls_context": {
                  "tls_certificates": [
                    {
                      "certificate_chain": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.crt"
                      },
                      "private_key": {
                        "filename": "/tmp/ambassador/snapshots/tcp-namespace/secrets-decoded/supersecret/00120BAD05E89249A2AE0F532D44EAC827AAF7E6.key"
                      }
                    }
                  ]
                }
              }
            }
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.filters.listener.tls_inspector"
          }
        ],
        "name": "listener-0.0.0.0-6789",
        "traffic_direction": "UNSPECIFIED"
      },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 7654,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "stat_prefix": "ingress_tcp_7654",
                  "weighted_clusters": {
                    "clusters": [
                      {
                        "name": "cluster_https___tcpmappingtest_http_targ-0",
                        "weight": 100
                      }
                    ]
                  }
                }
              }
            ]
          }
        ],
        "name": "listener-0.0.0.0-7654",
        "traffic_direction": "UNSPECIFIED"
      },
      {
        "address": {
          "socket_address": {
            "address": "127.0.0.1",
            "port_value": 8765,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "stat_prefix": "ingress_tcp_8765",
                  "weighted_clusters": {
                    "clusters": [
                      {
                        "name": "cluster_tcpmappingtest_http_target1_tcp_-0",
                        "weight": 100
                      }
                    ]
                  }
                }
              }
            ]
          }
        ],
        "name": "listener-127.0.0.1-8765",
        "traffic_direction": "UNSPECIFIED"
      },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 9876,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.tcp_proxy",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                  "stat_prefix": "ingress_tcp_9876",
                  "weighted_clusters": {
                    "clusters": [
                      {
                        "name": "cluster_tcpmappingtest_http_target1_tcp_-0",
                        "weight": 100
                      }
                    ]
                  }
                }
              }
            ]
          }
        ],
        "name": "listener-0.0.0.0-9876",
        "traffic_direction": "UNSPECIFIED"
      }
    ]
  }
}
